--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ needs.setup.outputs.tag }}
-          release_name: Pixiv Daily ${{ needs.setup.outputs.tag }}
+          release_name: Akasio ${{ needs.setup.outputs.tag }}
           draft: true
           prerelease: false
 
