updated README and configs
Signed-off-by: k4yt3x <i@k4yt3x.com>

--- a/configs/akasio.service
+++ b/configs/akasio.service
@@ -9,7 +9,7 @@ Type=simple
 User=nobody
 Group=nogroup
 WorkingDirectory=/etc
-ExecStart=/usr/local/bin/akasio -r /etc/akasio.json
+ExecStart=/usr/local/bin/akasio -t /etc/akasio.json
 Restart=always
 
 [Install]
